# AWRY

./: .gitignore  Cargo.toml  README.md
.github/: actions.yaml
.github/workflows/: actions.yaml  chatgpt_code_review.yaml  publish_crate.yaml
src/: alphabet.rs  bwt.rs  compressed_suffix_array.rs  fm_index.rs  fm_index_file.rs  kmer_lookup_table.rs  lib.rs  search.rs  sequence_index.rs  simd_instructions.rs
