[package]
name = "awry"
version = "0.2.2"
description = "Library for creating FM-indexes from FASTA/FASTQ files. AWRY is able to search at lightning speed by leveraging SIMD vectorization and multithreading over collections of queries."
license = "BSD-3-Clause"
homepage = "https://github.com/UM-Applied-Algorithms-Lab/AWRY_Index"
repository = "https://github.com/UM-Applied-Algorithms-Lab/AWRY_Index"
readme= "README.md"
keywords = ["search", "exact_match_search", "FM-index", "bioinformatics",  "FASTA_FASTQ"]
categories = ["command-line-utilities", "algorithms", "hardware-support", "science::bioinformatics"]
authors = [
    "Tim Anderson <tim.anderson@umontana.edu"
]
edition = "2021"

[dependencies]
rayon = "1.10.0"
anyhow = "1.0.92"
aligned = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
mem_dbg = "0.2.4"
libsufr = "0.6.2"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

rustflags = ["-C", "target-cpu=native"]


